adicionando alto contraste na barra de acessibilidade

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,16 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: var(--font-regular);
   font-size: 1rem;
+
+}
+.contraste {
+    background: #212529;
+}
+.contraste h4 {
+  color: #00ad50;
+}
+.contraste h3{
+   color: #00ad50;
 }
 
 h1, h2, h3, h4, h5, h6 {
